# securitycams

./: CMakeLists.txt  CameraThread.cpp  CameraThread.h  README.md  ServerThread.cpp  ServerThread.h  build-log.md  main.cpp
